# CPL_Fall2022

./: CMakeLists.txt  LICENSE  README.md
0-intro/: CMakeLists.txt  Hello.c  guess.c  practice.c
1-types-io-HW/: ASCII.c  CMakeLists.txt  Change.c  Equation.c  Gravity.c  Inverse.c  Julian.c  Pi.c  Time.c
10-Struct-and-11-Linkedlist/: CMakeLists.txt  fifa.c  file-management.c  polynlist.c  string-hash.c
2-if-for-array/: CMakeLists.txt  leap-if-else.c  min-of-three.c  min.c  practice.c
2-if-for-array-HW/: CMakeLists.txt  Inverse2.c  collatz.c  factorial.c  obstacle.c  series.c  single.c
2021-Exam/: CMakeLists.txt  bsearch.c  gobang.c  lineup.c  sorted.c
2022-cpl-final_project/: CMakeLists.txt
2023-Exam/: CMakeLists.txt  checker.c  unrolled-linked-list.c  whac-a-mole.c
3-for-a-while/: CMakeLists.txt  primes.c  stars.c
3-for-a-while-HW/: CMakeLists.txt  Quick-sort.c  decimal.c  flip.c  josephus.c  palindrome.c  statistics.c
4-loops-HW/: CMakeLists.txt  life.c  matrix-mult.c  mines.c  sudoku.c  trace.c
5-function-HW/: CMakeLists.txt  absolute-prime.c  magic-square.c  next-permutation.c  radix.c  sum.c
6-recursion/: CMakeLists.txt  bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-euclid-iter.c  gcd-euclid-re.c  gcd-euclidean-iter.c  gcd-euclidean-re.c  main-re.c  mergesort.c  min-re.c  min_.c  sum-re.c
6-recursion-HW/: CMakeLists.txt  integration.c  max.c  pascal.c  poi.c  tiles.c  triangle.c
7-data-types-HW/: CMakeLists.txt  brackets.c  buddy.c  cuboid.c  pour.c  rotate.c  stack.c  wine.c
8-pointer-HW/: CMakeLists.txt  interpreter.c  substr.c  (+1 more)
(+21 files in other folders)
