cmake_minimum_required(VERSION 3.23)
project(CPL C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(cProgramming_aModernApproach)
add_subdirectory(ProblemSet)
add_subdirectory(0-intro)
add_subdirectory(1-types-io-HW)
add_subdirectory(2-if-for-array)
add_subdirectory(2-if-for-array-HW)
add_subdirectory(3-for-a-while)
add_subdirectory(3-for-a-while-HW)
add_subdirectory(4-loops)
add_subdirectory(4-loops-HW)
add_subdirectory(5-function-HW)
add_subdirectory(6-recursion)
add_subdirectory(6-recursion-HW)
add_subdirectory(7-data-types-HW)
add_subdirectory(8-pointer-HW)
add_subdirectory(9-more-pointers-HW)
add_subdirectory(midtermProject-calculator)
add_subdirectory(10-Struct-and-11-Linkedlist)
add_subdirectory(2021-Exam)
