add_executable(bsearch-re bsearch-re.c)
add_executable(fib-array fib-array.c)
add_executable(fib-iter fib-iter.c)
add_executable(fib-re fib-re.c)
add_executable(gcd-euclid-iter gcd-euclid-iter.c)
add_executable(gcd-euclid-re gcd-euclid-re.c)
add_executable(gcd-euclidean-iter gcd-euclidean-iter.c)
add_executable(gcd-euclidean-re gcd-euclidean-re.c)
add_executable(main-re main-re.c)
add_executable(mergesort mergesort.c)
add_executable(min-re min-re.c)
add_executable(min_ min_.c)
add_executable(sum-re sum-re.c)